Revision history for Graph::Easy (formerly known as Graph::Simple):

2010-06-28 v0.68 Shlomi Fish 2933 tests
  * Add .*\.swp to the MANIFEST.SKIP in order to skip vim temporary files.
  * Fixed the signature file.
    - https://rt.cpan.org/Ticket/Display.html?id=58892
    - Thanks to Andreas Koenig (ANDK).

2010-05-28 v0.67 Shlomi Fish 2933 tests
  * Fix the as_vcg() vs. as_vcg_file() test that sometimes failed due
  to timestamp offsets in both files.
    - See: http://www.cpantesters.org/cpan/report/07338331-b19f-3f77-b713-d32bba55d77f

2010-05-23 v0.66 Shlomi Fish 2933 tests
  * Removed the leftover .orig files by request of a Debian maintainer (by
  private E-mail).

2010-05-23 v0.65 Shlomi Fish 2933 tests
  * Partial fix to bug #27663
    + Fix the name of the function in the code excerpt of as_graphviz()
    + Mark as_graphviz() and as_graphviz() as for internal use.
    + Make sure to indicate that one needs to load Graph::Easy::As_graphviz
      beforehand.
  * Fix for https://rt.cpan.org/Ticket/Display.html?id=48657
    + Specify what the default timeout is in the POD of Graph::Easy.
    + Thanks to MTHURN for reporting it.
  * Fix for https://rt.cpan.org/Ticket/Display.html?id=51820
    + Changed C<..> to C<< ... >>> for correct POD rendering.
  * Applied patch from https://rt.cpan.org/Ticket/Display.html?id=57777
    + Spelling errors.

2008-08-10 v0.64 Tels 2933 tests
  * fix bug #37534 - overwrites input without warning (Thanx C. Khan!)
  * fix bug #37566 - Graphviz (v2.16) output broken (Thanx C. Khan!)
  * fix bug #37842 - typo in README (Thanx Craig Sparks!)
  * fix add_nodes(), would return instead of skipping existing nodes
  * as_graphml:
    + fix #36533: GraphML end tag (Thanx Thiago M. Venancio!)
    + fix indent and endtag of groups (Thanx Thiago M. Venancio!)
    + properly escape special characters in group/graph names
    + add format => 'yED' to output as yED compatible (Thanx to
      Thiago M. Venancio for requesting and testing this!)